fix: fix rare cases of lots of overflowing texts

--- a/components/Page/src/index.scss
+++ b/components/Page/src/index.scss
@@ -22,6 +22,7 @@
 
     &__main {
       flex-grow: 1;
+      max-width: 100%;
     }
   }
 
